--- a/todoro/resources/resources.qrc
+++ b/todoro/resources/resources.qrc
@@ -12,6 +12,8 @@
         <file>stop.png</file>
         <file>sun.png</file>
         <file>urgent.png</file>
+        <file>star.png</file>
+        <file>stargray.png</file>
     </qresource>
     <qresource prefix="/sqlite">
         <file>todoro.db</file>
