--- a/todoro/frmoptions.ui
+++ b/todoro/frmoptions.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>557</width>
-    <height>232</height>
+    <height>392</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,6 +29,13 @@
        <string>Advanced</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QPushButton" name="btnBackup">
+         <property name="text">
+          <string>Create backup</string>
+         </property>
+        </widget>
+       </item>
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
