--- a/todoro/frmMain.ui
+++ b/todoro/frmMain.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>662</width>
-    <height>401</height>
+    <height>403</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -424,7 +424,7 @@
      <x>0</x>
      <y>0</y>
      <width>662</width>
-     <height>26</height>
+     <height>30</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_Archivo">
@@ -441,6 +441,7 @@
     <property name="title">
      <string>&amp;Help</string>
     </property>
+    <addaction name="action_About_Qt"/>
     <addaction name="action_About"/>
    </widget>
    <addaction name="menu_Archivo"/>
@@ -454,7 +455,7 @@
   </action>
   <action name="action_About">
    <property name="text">
-    <string>&amp;About</string>
+    <string>&amp;About todoro</string>
    </property>
   </action>
   <action name="actionNew_Project">
@@ -465,6 +466,11 @@
   <action name="action_Preferences">
    <property name="text">
     <string>&amp;Preferences...</string>
+   </property>
+  </action>
+  <action name="action_About_Qt">
+   <property name="text">
+    <string>About Qt ...</string>
    </property>
   </action>
  </widget>
